portage-bashrc-mv-20.0
----------------------
- Backward-incompatible change:
  /-foo/-bar will not add -bar if -foo cannot be found.
  The previous behaviour can be achieved by /-foo/-bar -bar.
  As a side-effect, do not unconditionally add -fstack-check for non-GNU.
- Output C++ and LD version.

portage-bashrc-mv-19.0
----------------------
Support F*FLAGS, and let *FLAGS= and *FLAGS+= include F*FLAGS.
You can use C*FLAGS=... LDFLAGS= OPTLDFLAGS= or C*FLAGS+=, respectively,
if you do not like the latter two.

portage-bashrc-mv-18.1
----------------------
Support QLOP_COUNT (default 3). Thanks to guitoo for the suggestion,
see https://github.com/vaeth/portage-bashrc-mv/issues/18
Also evaluate NOQLOP according to the usual true/false logic.

portage-bashrc-mv-18.0
----------------------
It is now possible to set NOQLOP to skip the qlop feature (e.g. for
comptability problems with old qlop versions). In addition, the FLAG feature
is now the first file parsed so that it /etc/portage/package.cflags can be
used to set this variable.
The AUTHORS file now finally contains the contributor to 17.3:
Sorry, I had changed it immediately but had forgotten to commit.


portage-bashrc-mv-17.0
----------------------
No longer work with <app-portage/portage-utils-0.74-r1, but support instead
>=app-portage/portage-utils-0.80_pre20190605.


portage-bashrc-mv-16.0
----------------------
New localepurge configuration; ignore that of app-admin/localepurge


portage-bashrc-mv-15.0
----------------------
Support MESONDEDUP:
>=meson-0.47 had the insane idea to forbid the user to specify flags
simultaneously in e.g. LDFLAGS and CFLAGS.
Although the same flags must necessarily be specified in some cases during
compile and link phase, meson insists to have the sole decision about this,
thus breaking with *FLAGS meant to be used also for other build systems.
As a workaround, portage-bashrc-mv now supports a variable MESONDEDUP: