@@ -1,5 +1,5 @@
 Current maintainer and main author:
-Martin Väth <mvath at google.com>
+Martin Väth <martin at mvath.de>
 
 Alessandro Barbieri <ale.barbio at alice.it>
 automorphism88
