@@ -1,7 +1,8 @@
 # portage-bashrc-mv
 
-(C) Martin Väth <mvath@google.com>
+(C) Martin Väth <martin at mvath.de>
 The license of this project is the GNU Public License GPL-2.
+SPDX-License-Identifier: GPL-2.0-only
 
 The portage-bashrc-mv project is meant to be used with the
 gentoo portage system and serves two purposes.
