@@ -1,5 +1,6 @@
 #!/bin/bash
-# (C) Martin V\"ath <martin@mvath.de>
+# (C) Martin V\"ath <martin at mvath.de>
+# SPDX-License-Identifier: GPL-2.0-only
 [ "`type -t BashrcdMain`" = function ] || \
 . "${PORTAGE_CONFIGROOT%/}/etc/portage/bashrc.d/bashrcd.sh"
 BashrcdMain "$@"
