@@ -1,4 +1,5 @@
 #!/usr/bin/env sh
+# SPDX-License-Identifier: GPL-2.0-only
 Die() {
 	echo "${0##*/}: $*" >&2
 	exit 1
